<resources>
    <string name="app_name">MisfitPlayground</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="animate">Animate</string>
    <string name="stop_animate">Stop\nAnimate</string>
    <string name="connect">Connect</string>
    <string name="device">Device</string>
    <string name="no_device"></string>
    <string name="select_device">Select Device</string>
    <string name="scanning">Scanning </string>
    <string name="start_sync">Sync</string>
    <string name="config">Config</string>
    <string name="start_ota">OTA</string>
    <string name="set_config_hint">point, goal, clock</string>
    <string name="close">Close</string>
    <string name="activate">Activate</string>
    <string name="sdk_version">sdk version</string>
</resources>
