<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deviceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device">
            </TextView>

            <TextView
                android:id="@+id/deviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_device"
                android:textAppearance="?android:attr/textAppearanceMedium">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_start_or_stop_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/connect"/>

        <Button
            android:id="@+id/btn_animate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btn_connect"
            android:text="@string/animate"/>

        <Button
            android:id="@+id/btn_stop_animate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btn_close"
            android:text="@string/stop_animate"/>

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/close"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonLayout1b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/start_sync"/>

        <Button
            android:id="@+id/btn_ota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btn_sync"
            android:text="@string/start_ota"/>

        <Button
            android:id="@+id/btn_activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btn_interrupt"
            android:text="@string/activate"/>

        <Button
            android:id="@+id/btn_interrupt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="Interrupt"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <EditText
            android:id="@+id/edit_set_configuration"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_configuration"
            android:layout_alignParentStart="true"
            android:hint="@string/set_config_hint"
            android:inputType="text"
            android:textSize="14sp">
        </EditText>

        <Button
            android:id="@+id/btn_configuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/config"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/sdk_version"
                android:fillViewport="true"
                android:scrollbars="vertical">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:alpha="0.9"
                    android:gravity="top"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:textSize="12sp"
                    android:typeface="monospace" />
            </ScrollView>

        <TextView
            android:id="@+id/sdk_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/sdk_version"
            android:textSize="12sp"
            android:typeface="monospace" />

    </RelativeLayout>

</LinearLayout>
